--- a/industries.html
+++ b/industries.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about flora and fauna of telangana</title>
+    <title>industries</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -32,14 +32,15 @@
             </a>
         </ul>
     </nav>
-    <div class="about-dance">
-        <h1>About flora and fauna of Telangana</h1>
-        <p>Telangana, located strategically in the central region of the Indian sub-continent, has representatives <br> of Indian plant and animal life. The vegetation found in the state is largely of dry deciduous type with <br> a mixture of teak, and species
-            of the genera Terminalia, Pterocarpus, Anogeissus etc . The varied habitat <br> harbors a diversity of fauna which includes tiger, panther, wolf, wild dog, hyena, sloth bear, Gaur, Black Buck, <br> Chinkara, Chowsingha, Nilgai, Cheetal, Sambar
-            and a number of birds and reptiles in the forest.</p>
-        <img src="flora and fauna.jpg" alt="" style="margin-bottom: -30px;">
-    </div>
-    <footer class="footer flora-footer">
+    <ul class="ul">
+        <li>
+            <a href="name.html" style="text-decoration: none;color: rgb(110, 0, 0);">industries</a>
+        </li>
+        <li>
+            <a href="hazard.html" style="text-decoration: none;color: rgb(110, 0, 0);">occupational hazard</a>
+        </li>
+    </ul>
+    <footer class="footer industries-footer">
         <form class="form">
             <h1>contact us</h1>
             <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
