--- a/main.html
+++ b/main.html
@@ -27,6 +27,9 @@
             <a href="#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
+            <a href="industries.html">
+                <li><i class="fas fa-industry"></i>industries</li>
+            </a>
         </ul>
     </nav>
     <div class="mid" id="home">
@@ -119,7 +122,8 @@
             </p>
 
             <p>
-                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
+                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com">
+                    vaibhavyadav.1050@gmail.com</a>
             </p>
         </div>
         <div class="icon"><i class="fab fa-facebook-f icons"></i><i class="fab fa-instagram icons"></i><i class="fab fa-twitter icons"></i><i class="fab fa-youtube icons"></i></div>
