--- a/name.html
+++ b/name.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about flora and fauna of telangana</title>
+    <title>name of industries</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -32,14 +32,24 @@
             </a>
         </ul>
     </nav>
-    <div class="about-dance">
-        <h1>About flora and fauna of Telangana</h1>
-        <p>Telangana, located strategically in the central region of the Indian sub-continent, has representatives <br> of Indian plant and animal life. The vegetation found in the state is largely of dry deciduous type with <br> a mixture of teak, and species
-            of the genera Terminalia, Pterocarpus, Anogeissus etc . The varied habitat <br> harbors a diversity of fauna which includes tiger, panther, wolf, wild dog, hyena, sloth bear, Gaur, Black Buck, <br> Chinkara, Chowsingha, Nilgai, Cheetal, Sambar
-            and a number of birds and reptiles in the forest.</p>
-        <img src="flora and fauna.jpg" alt="" style="margin-bottom: -30px;">
+    <div style="position: absolute;margin-top: 150px;margin-left: 100px;">
+        <h1>ELDA Technology</h1>
+        <h3>Computer Software company</h3>
+        <div style="display: flex;">
+            <p style="margin: 20px;">The ELDA Ingegneria Group, a pioneer in the Information Technology industry since the 1980s,<br> is now one of Europe’s key players in telematics. The group operates in the automotive telematics <br> market, the development of vertical applications
+                for the Internet of Things, mapping solutions for <br> the tracking and management of corporate assets, and vehicles and personal safety.</p><img src="elda.png" alt=""></div>
+
     </div>
-    <footer class="footer flora-footer">
+    <div style="position: absolute;margin-top: 500px;margin-left: 100px;">
+        <h1>Union Machine corporate</h1>
+        <h3>Pipe bending Machine</h3>
+        <div style="display: flex;">
+            <p style="margin: 20px;width: 700px;">Awarded Manufacturer of the Year Award in 2018, Union Machine is a Service Disabled veteran-owned <br> family business that, as an OEM provider and prime contractor of jet engine and other precision parts, <br> has been an important innovator
+                and contributor to the aerospace business for over 60 years.</p><img src="union.svg" alt=""></div>
+
+    </div>
+
+    <footer class="footer name-footer">
         <form class="form">
             <h1>contact us</h1>
             <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
@@ -52,7 +62,7 @@
             <ul>
                 <li><a href="">gallery</a></li>
                 <li>
-                    <a href="">Monument</a>
+                    <a href="monument.html">Monument</a>
                 </li>
                 <li>
                     <a href="home work.html"> Museums</a>
@@ -76,7 +86,8 @@
             </p>
 
             <p>
-                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
+                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com">
+                    vaibhavyadav.1050@gmail.com</a>
             </p>
         </div>
         <div class="icon"><i class="fab fa-facebook-f icons"></i><i class="fab fa-instagram icons"></i><i class="fab fa-twitter icons"></i><i class="fab fa-youtube icons"></i></div>
