--- a/about telangana.html
+++ b/about telangana.html
@@ -10,22 +10,25 @@
 </head>
 
 <body>
-    <nav class=" nav ">
+    <nav class="nav">
         <ul>
-            <a href="main.html ">
-                <li><i class="fas fa-home "></i>Home</li>
+            <a href="main.html">
+                <li><i class="fas fa-home"></i>Home</li>
             </a>
-            <a href=" ">
-                <li><i class="fas fa-monument "></i>Monument</li>
+            <a href="monument.html">
+                <li><i class="fas fa-monument"></i>Monument</li>
             </a>
-            <a href="home work.html ">
-                <li><i class="fas fa-landmark "></i> Museums</li>
+            <a href="home work.html">
+                <li><i class="fas fa-landmark"></i> Museums</li>
             </a>
-            <a href="about telangana.html " target="_self ">
-                <li><i class="fas fa-info "></i> About Telangana</li>
+            <a href="about telangana.html" target="_self">
+                <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
-            <a href="main.html#map ">
-                <li><i class="fas fa-map-marker-alt "></i>Location</li>
+            <a href="#map">
+                <li><i class="fas fa-map-marker-alt"></i>Location</li>
+            </a>
+            <a href="industries.html">
+                <li><i class="fas fa-industry"></i>industries</li>
             </a>
         </ul>
     </nav>
