--- a/main.html
+++ b/main.html
@@ -65,8 +65,9 @@
         </div>
         <div class="sec3">
             <h1>Temples</h1>
-            <p>Telangana region is home to several Temples spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the faith of god.<button>know
-                    more<i class="fas fa-long-arrow-alt-right"></i></button></p>
+            <p>Telangana region is home to several Temples spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the faith of god.
+                <a href="temples.html" style="color:white;text-decoration:none;"></a><button>know
+                    more</a><i class="fas fa-long-arrow-alt-right"></i></button></p>
         </div>
     </div>
     <br>
