--- a/temples.html
+++ b/temples.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>temples of telangana</title>
+    <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
+    <title>temples of telangana</title>
 </head>
+
 <body bgcolor="red">
-	<p align="center"><b><font face="Bahamas" size="50">Temples Of Telangana</p></font>
+    <div>
+        <nav class="nav">
+            <ul>
+                <a href="main.html">
+                    <li><i class="fas fa-home"></i>Home</li>
+                </a>
+                <a href="monument.html">
+                    <li><i class="fas fa-monument"></i>Monument</li>
+                </a>
+                <a href="home work.html">
+                    <li><i class="fas fa-landmark"></i> Museums</li>
+                </a>
+                <a href="about telangana.html" target="_self">
+                    <li><i class="fas fa-info"></i> About Telangana</li>
+                </a>
+                <a href="#map">
+                    <li><i class="fas fa-map-marker-alt"></i>Location</li>
+                </a>
+                <a href="industries.html">
+                    <li><i class="fas fa-industry"></i>industries</li>
+                </a>
+            </ul>
+        </nav>
+        <p align="center"><b><font face="Bahamas" size="50">Temples Of Telangana</p></font>
 
 <font face ="Bahamas"color="white" size ="5"><br><br>
 1. Birla Mandir
@@ -52,5 +79,6 @@ and Ramappa Temple are added to the tentative list of World Heritage sites recog
 
 
 </font>
+</div>
 </body>
 </html>
