--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
             <a href="main.html">
                 <li><i class="fas fa-home"></i>Home</li>
             </a>
-            <a href="">
+            <a href="monument.html">
                 <li><i class="fas fa-monument"></i>Monument</li>
             </a>
             <a href="home work.html">
