--- a/monument.html
+++ b/monument.html
@@ -21,7 +21,7 @@
             <a href="about telangana.html" target="_self">
                 <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
-            <a href="#map">
+            <a href="main.html#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
             <a href="industries.html">
