--- a/industries.html
+++ b/industries.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>industries</title>
+    <title>name of industries</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -24,7 +24,7 @@
             <a href="about telangana.html" target="_self">
                 <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
-            <a href="#map">
+            <a href="main.html#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
             <a href="industries.html">
@@ -32,55 +32,75 @@
             </a>
         </ul>
     </nav>
-    <ul class="ul">
-        <li>
-            <a href="name.html" style="text-decoration: none;color: rgb(110, 0, 0);">industries</a>
-        </li>
-        <li>
-            <a href="hazard.html" style="text-decoration: none;color: rgb(110, 0, 0);">occupational hazard</a>
-        </li>
-    </ul>
-    <footer class="footer industries-footer">
-        <form class="form">
+    <div style="position: absolute;margin-top: 150px;margin-left: 100px;">
+        <h1>ELDA Technology</h1>
+        <h3>Computer Software company</h3>
+        <div style="display: flex;">
+            <p style="margin: 20px;">The ELDA Ingegneria Group, a pioneer in the Information Technology industry since the 1980s,<br> is now one of Europe’s key players in telematics. The group operates in the automotive telematics <br> market, the development of vertical applications
+                for the Internet of Things, mapping solutions for <br> the tracking and management of corporate assets, and vehicles and personal safety.</p>
+            <p style="position: absolute; margin-top: 150px;margin-left: 20px;">occupational hazard:<br> First & most basic: less physical activities & excess strain on eyes, causes some health <br> problems. Mental: stress, due your boss/collegues (many reasons are there, depends on situation) . <br> so, these both are
+                reasons due to which you see many people in IT have big belly, health problems & are bald.</p><img src="elda.png" alt=""></div>
+
+    </div>
+    <div style="position: absolute;margin-top: 500px;margin-left: 100px;">
+        <h1>Union Machine corporate</h1>
+        <h3>Pipe bending Machine</h3>
+        <div style="display: flex;">
+            <p style="margin: 20px;width: 700px;">Awarded Manufacturer of the Year Award in 2018, Union Machine is a Service Disabled veteran-owned <br> family business that, as an OEM provider and prime contractor of jet engine and other precision parts, <br> has been an important innovator
+                and contributor to the aerospace business for over 60 years.Physical: First & most basic: less physical activities & excess strain on eyes, causes some health problems. Mental: stress, due your boss/collegues (many reasons are there, depends
+                on situation) . so, these both are reasons due to which you see many people in IT have big belly, health problems & are bald.</p>
+            <p style="position: absolute;margin-top: 200px;margin-left: 20px;">occupational hazard:<br>This could lead to chronic musculoskeletal disorders such as low back pain among bar benders. The aim of this study is to assess the ergonomics of manual bar bending and thereby develop a customized optimal workplace
+                for bar bending. Biomechanical analysis was done using a three-dimensional Schultz-Andersson model to determine the influence of the diameter of the bar on the compressive force (Fc) at L5 S1. The effect of table height, grip arm distance,
+                and back bend angle on Fc were also evaluated. Fc decreased up to 53%, with an increase of table height by 400 mm, and up to 41%, with an increase of grip arm distance by 500 mm; however it increased with back bend angle. Fc was higher
+                than the NIOSH safety limit of (3.4 kN) in all cases except when bending 8 mm bars. A quick field reference for optimal table height and grip arm distance was prepared based on subjects' anthropometry and diameter, using Nash bargaining
+                principles.
+            </p>
+            <img src="union.svg " alt=" "></div>
+
+    </div>
+
+    <footer class="footer name-footer ">
+        <form class="form ">
             <h1>contact us</h1>
-            <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
-            <input type="email" placeholder="enter your email adress" required>
-            <textarea id="area" cols="31" rows="10" placeholder="Message..." required></textarea>
-            <button type="submit"><i class="far fa-paper-plane"></i>send</button>
+            <input type="text " placeholder="enter your full name " minlength="2 " maxlength="25 " required>
+            <input type="email " placeholder="enter your email adress " required>
+            <textarea id="area " cols="31 " rows="10 " placeholder="Message... " required></textarea>
+            <button type="submit "><i class="far fa-paper-plane "></i>send</button>
         </form>
-        <div class="quick-links">
+        <div class="quick-links ">
             <h2>QUICK LINKS</h2>
             <ul>
-                <li><a href="">gallery</a></li>
+                <li><a href=" ">gallery</a></li>
                 <li>
-                    <a href="">Monument</a>
+                    <a href="monument.html ">Monument</a>
                 </li>
                 <li>
-                    <a href="home work.html"> Museums</a>
+                    <a href="home work.html "> Museums</a>
                 </li>
                 <li>
-                    <a href=""> About us </a>
+                    <a href=" "> About us </a>
                 </li>
                 <li>
-                    <a href="blog.html"> create a blog</a>
+                    <a href="blog.html "> create a blog</a>
                 </li>
             </ul>
         </div>
-        <h2 class="end">&copy;2020 Department of Heritage Telangana | All Rights Reserved. </h2>
-        <div class="adress">
+        <h2 class="end ">&copy;2020 Department of Heritage Telangana | All Rights Reserved. </h2>
+        <div class="adress ">
             <h2> Department of Heritage Telangana</h2><br>
-            <p><i class="fas fa-map-marker-alt"></i>Opposite to Golkonda Handicrafts Emporium,<br> Gunfoundry, Abids, Hyderabad <br> Telangana, India - 500001</p>
+            <p><i class="fas fa-map-marker-alt "></i>Opposite to Golkonda Handicrafts Emporium,<br> Gunfoundry, Abids, Hyderabad <br> Telangana, India - 500001</p>
         </div>
-        <div class="info">
+        <div class="info ">
             <p>
-                <i class="fas fa-phone-alt"></i> <a href="tel:+918744876721">+91-87448-76721</a>
+                <i class="fas fa-phone-alt "></i> <a href="tel:+918744876721 ">+91-87448-76721</a>
             </p>
 
             <p>
-                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
+                <i class="fas fa-envelope "></i> <a href="mailto:vaibhavyadav.1050@gmail.com ">
+                    vaibhavyadav.1050@gmail.com</a>
             </p>
         </div>
-        <div class="icon"><i class="fab fa-facebook-f icons"></i><i class="fab fa-instagram icons"></i><i class="fab fa-twitter icons"></i><i class="fab fa-youtube icons"></i></div>
+        <div class="icon "><i class="fab fa-facebook-f icons "></i><i class="fab fa-instagram icons "></i><i class="fab fa-twitter icons "></i><i class="fab fa-youtube icons "></i></div>
     </footer>
 </body>
 
