--- a/about culture.html
+++ b/about culture.html
@@ -30,12 +30,16 @@
             <a href="industries.html">
                 <li><i class="fas fa-industry"></i>industries</li>
             </a>
+            <a href="growth.html">
+                <li><i class="fas fa-chart-line"></i>economic growth</li>
+            </a>
         </ul>
     </nav>
     <div id="about2">
         <h1>About culture of Telangana</h1>
         <p>The Culture of Telangana in India has a cultural history of about 5,000 years.<br>Telangana State has long been a meeting place for diverse languages and cultures. <br> It is known as "South of North and North of South". It is also known for its
-            Ganga-Jamuna <br> Tehzeeb and the capital Hyderabad is known as a miniature India.</p>
+            Ganga-Jamuna
+            <br> Tehzeeb and the capital Hyderabad is known as a miniature India.</p>
         <img src="bg.jpg" alt="error">
     </div>
     <footer class="footer culture-footer">
