--- a/about dance.html
+++ b/about dance.html
@@ -30,6 +30,9 @@
             <a href="industries.html">
                 <li><i class="fas fa-industry"></i>industries</li>
             </a>
+            <a href="growth.html">
+                <li><i class="fas fa-chart-line"></i>economic growth</li>
+            </a>
         </ul>
     </nav>
     <div class="about-dance">
