--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,12 @@
             <a href="main.html#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
+            <a href="industries.html">
+                <li><i class="fas fa-industry"></i>industries</li>
+            </a>
+            <a href="growth.html">
+                <li><i class="fas fa-chart-line"></i>economic growth</li>
+            </a>
         </ul>
     </nav>
     <div class="blog">
