--- a/industries.html
+++ b/industries.html
@@ -30,6 +30,9 @@
             <a href="industries.html">
                 <li><i class="fas fa-industry"></i>industries</li>
             </a>
+            <a href="growth.html">
+                <li><i class="fas fa-chart-line"></i>economic growth</li>
+            </a>
         </ul>
     </nav>
     <div style="position: absolute;margin-top: 150px;margin-left: 100px;">
