--- a/temples.html
+++ b/temples.html
@@ -29,6 +29,9 @@
                 <a href="industries.html">
                     <li><i class="fas fa-industry"></i>industries</li>
                 </a>
+                <a href="growth.html">
+                    <li><i class="fas fa-chart-line"></i>economic growth</li>
+                </a>
             </ul>
         </nav>
         <p align="center"><b><font face="Bahamas" size="50">Temples Of Telangana</p></font>
