--- a/monument.html
+++ b/monument.html
@@ -27,6 +27,9 @@
             <a href="industries.html">
                 <li><i class="fas fa-industry"></i>industries</li>
             </a>
+            <a href="growth.html">
+                <li><i class="fas fa-chart-line"></i>economic growth</li>
+            </a>
         </ul>
     </nav>
     <center>
