--- a/main.html
+++ b/main.html
@@ -53,20 +53,21 @@
         <div class="sec1">
             <h1>Monument</h1>
             <p>Telangana region is home to several monuments spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the cultural zenith of Telangana state.
+                <br>
                 <a href="monument.html"> <button>know more<i class="fas fa-long-arrow-alt-right"></i></button></a>
             </p>
         </div>
         <div class="sec2">
             <h1>Museums</h1>
             <p>There are thirteen prominent museums in the state of Telangana. Alampur and Kolanupaka are two sites museums in the state. The district museums are in Warangal, Karimnagar, Nizamabad, Pillalamarri and Panagal. Hyderabad city has four museums
-                of great significance.
+                of great significance. <br>
                 <a href="home work.html"><button>know more<i class="fas fa-long-arrow-alt-right"></i></button></a>
             </p>
         </div>
         <div class="sec3">
             <h1>Temples</h1>
             <p>Telangana region is home to several Temples spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the faith of god.
-                <a href="temples.html" style="color:white;text-decoration:none;"><button>know
+                <br> <a href="temples.html" style="color:white;text-decoration:none;"><button>know
                         more<i class="fas fa-long-arrow-alt-right"></i></button></a>
             </p>
         </div>
